--- a/image-factory/bundle-trusty-vpn-spawn-server-s2s/heat/addinstancelanserver.yml
+++ b/image-factory/bundle-trusty-vpn-spawn-server-s2s/heat/addinstancelanserver.yml
@@ -92,8 +92,8 @@ resources:
             sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw_df.tmp
             sed -i -e "s/0:24/100/g" /home/cloud/config/server_cidr_gw.tmp
             sed -i -e "s/0:24/1/g"  /home/cloud/config/server_cidr_gw_df.tmp
-            sudo route add -net "$client_cidr$"/24 gw $(cat /home/cloud/config/server_cidr_gw_df.tmp)
-            sudo route add -net "$client_cidr$"/24 gw $(cat /home/cloud/config/server_cidr_gw.tmp)
+            sudo route add -net "$client_cidr$" gw $(cat /home/cloud/config/server_cidr_gw_df.tmp)
+            sudo route add -net "$client_cidr$" gw $(cat /home/cloud/config/server_cidr_gw.tmp)
           params:
             $server_cidr$: {get_param: server_cidr}
             $client_cidr$: {get_param: client_cidr}
@@ -124,7 +124,7 @@ outputs:
     description: IP address of client in private network
     value: { get_attr: [ server, first_address ] }
 
-  security_group__id:
+  security_group_id:
     description: ID of the security group associate to the server
     value: {get_resource: security_group}
 
