--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
@@ -84,6 +84,7 @@
     chdir: /home/cloud
     executable: /bin/bash
   shell: |
+    cd /home/cloud/
     sudo /sbin/iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
     sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
     sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
