--- a/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
@@ -69,19 +69,24 @@ parameters:
     default: mickael
 
   flavor_name:
-    default: n1.cw.standard-2
+    default: n2.cw.standard-2
     description: Flavor to use for the deployed instance
     type: string
     label: Instance Type (Flavor)
     constraints:
       - allowed_values:
-          - s1.cw.small-1
-          - n1.cw.standard-1
-          - n1.cw.standard-2
-          - n1.cw.standard-4
-          - n1.cw.standard-8
-          - n1.cw.standard-12
-          - n1.cw.standard-16
+        - t1.cw.tiny
+        - s1.cw.small-1
+        - n2.cw.standard-1
+        - n2.cw.standard-2
+        - n2.cw.standard-4
+        - n2.cw.standard-8
+        - n2.cw.standard-12
+        - n2.cw.standard-16
+        - n2.cw.highmem-2
+        - n2.cw.highmem-4
+        - n2.cw.highmem-8
+        - n2.cw.highmem-12
 
 resources:
 
