--- a/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/tasks/main.yml
@@ -300,7 +300,7 @@
     chdir: /etc/openvpn/
     executable: /bin/bash
   shell: |
-    sudo service openvpn restart
+    sudo service openvpn start
 
 - name: cleaning
   args:
@@ -308,4 +308,4 @@
     executable: /bin/bash
   shell: |
     sudo rm -r CLOUDPATT
-    sudo rm -r config
+    #sudo rm -r config
