--- a/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/tasks/main.yml
@@ -287,9 +287,9 @@
     replace='AUTOSTART="all"'
 
 
-- name: change ownership and right my_key2.pem
+- name: change ownership and right my_key.pem
   file:
-    path=/home/cloud/.ssh/my_key2.pem
+    path=/home/cloud/.ssh/my_key.pem
     owner=cloud
     group=cloud
     mode=600
