--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/tasks/main.yml
@@ -332,6 +332,15 @@
     #sudo route add -net {{client_cidr}} netmask 255.255.255.0 gw {{server_cidr_gw}}
     sudo service openvpn restart
 
+#- name: iptablenat
+#  args:
+#    chdir: /home/cloud
+#    executable: /bin/bash
+#  shell: |
+#    sudo /sbin/iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
+#    sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
+#    sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
+
 - name: cleaning
   args:
     chdir: /home/cloud
