--- a/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
@@ -66,7 +66,7 @@ parameters:
     description: Keypair to inject in instance
     label: SSH Keypair
     type: string
-    default: mickael
+    default: mickaelfr2
 
   flavor_name:
     default: n2.cw.standard-2
@@ -126,7 +126,8 @@ resources:
   floating_ip:
     type: OS::Neutron::FloatingIP
     properties:
-      floating_network_id: 6ea98324-0f14-49f6-97c0-885d1b8dc517
+      floating_network_id: b5dd7532-1533-4b9c-8bf9-e66631a9be1d
+      #floating_network_id: 6ea98324-0f14-49f6-97c0-885d1b8dc517
       port_id: { get_resource: server_port }
 
 
