--- a/image-factory/bundle-trusty-vpn-collectdG/heat/collectdG.yml
+++ b/image-factory/bundle-trusty-vpn-collectdG/heat/collectdG.yml
@@ -30,6 +30,13 @@ parameters:
         - n2.cw.highmem-8
         - n2.cw.highmem-12
 
+public_net_id:
+  type: string
+  description: Public network ID
+  default: b5dd7532-1533-4b9c-8bf9-e66631a9be1d
+  #default: 6ea98324-0f14-49f6-97c0-885d1b8dc517
+
+
 resources:
 
   network:
@@ -38,8 +45,7 @@ resources:
   floating_ip:
     type: OS::Neutron::FloatingIP
     properties:
-      #floating_network_id: 6ea98324-0f14-49f6-97c0-885d1b8dc517
-      floating_network_id: b5dd7532-1533-4b9c-8bf9-e66631a9be1d
+      floating_id: { get_resource: public_net_id }
       port_id: { get_resource: server_port }
 
   floating_ip_link:
