--- a/image-factory/bundle-trusty-collectdG/ansible/roles/collectdG/tasks/main.yml
+++ b/image-factory/bundle-trusty-collectdG/ansible/roles/collectdG/tasks/main.yml
@@ -24,20 +24,20 @@
     cp /usr/share/graphite-web/apache2-graphite.conf /etc/apache2/sites-available
     a2ensite apache2-graphite
 
-- name: setting enable carbon-cache
-  lineinfile:
+#- name: setting enable carbon-cache
+- lineinfile:
     dest= /etc/default/graphite-carbon
     regexp='#CARBON_CACHE_ENABLED = false'
     line='CARBON_CACHE_ENABLED = true'
 
-- name: setting enable carbon-cache2
-  lineinfile:
+#- name: setting enable carbon-cache2
+- lineinfile:
     dest= /etc/carbon/carbon.conf
     regexp='#ENABLE_LOGROTATION = false'
     line='ENABLE_LOGROTATION = true'
 
-- name: setting enable carbon-cache3
-  lineinfile:
+#- name: setting enable carbon-cache3
+- lineinfile:
     dest= /etc/carbon/carbon.conf
     regexp='#MAX_CREATES_PER_MINUTE = 50'
     line='MAX_CREATES_PER_MINUTE = 600'
@@ -50,14 +50,14 @@
     sudo -i
     cp /usr/share/doc/graphite-carbon/examples/storage-aggregation.conf.example /etc/carbon/storage-aggregation.conf
 
-- name: setting  graphite-local
-  lineinfile:
+#- name: setting  graphite-local
+- lineinfile:
     dest= /etc/graphite/local_settings.py
     regexp='#SECRET_KEY = UNSAFE_DEFAULT'
     line='SECRET_KEY = jkfdjlskfjdslkjopelezkmlezakmlza5654trlkre'
 
-- name: setting  graphite-local2
-  lineinfile:
+#- name: setting  graphite-local2
+- lineinfile:
     dest= /etc/graphite/local_settings.py
     regexp='#TIME_ZONE = America/Los_Angelesb'
     line='TIME_ZONE = Europe/Paris'
