--- a/image-factory/bundle-trusty-collectdG/ansible/roles/collectdG/tasks/main.yml
+++ b/image-factory/bundle-trusty-collectdG/ansible/roles/collectdG/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
-
+  - hosts: local
+    user: cloud
+    become: yes
+    
   - name: download packages
     args:
       #chdir: /etc/openvpn/
