--- a/image-factory/bundle-trusty-collectdG/ansible/roles/collectdG/tasks/main.yml
+++ b/image-factory/bundle-trusty-collectdG/ansible/roles/collectdG/tasks/main.yml
@@ -6,10 +6,14 @@
     shell: |
       sudo apt-get install apache2 libapache2-mod-wsgi graphite-web graphite-carbon -y
       sudo echo "deb https://packagecloud.io/grafana/stable/debian/ wheezy maindeb https://packagecloud.io/grafana/stable/debian/ wheezy main" >>  /etc/apt/sources.list
-      sudo apt-get install apt-transport-https -y
       sudo curl https://packagecloud.io/gpg.key | apt-key add -
       sudo apt-get update -y
-      sudo apt-get install grafana -y
+      wget https://grafanarel.s3.amazonaws.com/builds/grafana_3.0.3-1463994644_amd64.deb
+      sudo apt-get install -y adduser libfontconfig
+      sudo dpkg -i grafana_3.0.3-1463994644_amd64.deb
+      sudo apt-get update
+      sudo apt-get install grafana
+      sudo apt-get install apt-transport-https -y
       sudo apt-get install collectd collectd-utils -y
 
   - name: configuration Apache pour graphite
@@ -25,20 +29,20 @@
   #- name: setting enable carbon-cache
   - replace:
       dest=/etc/default/graphite-carbon
-      regexp='#CARBON_CACHE_ENABLED = false'
-      replace='CARBON_CACHE_ENABLED = true'
+      regexp='#CARBON_CACHE_ENABLED=false'
+      replace='CARBON_CACHE_ENABLED=true'
 
   #- name: setting enable carbon-cache2
   - replace:
       dest=/etc/carbon/carbon.conf
-      regexp='#ENABLE_LOGROTATION = false'
-      replace='ENABLE_LOGROTATION = true'
+      regexp='#ENABLE_LOGROTATION=false'
+      replace='ENABLE_LOGROTATION=true'
 
   #- name: setting enable carbon-cache3
   - replace:
       dest=/etc/carbon/carbon.conf
-      regexp='#MAX_CREATES_PER_MINUTE = 50'
-      replace='MAX_CREATES_PER_MINUTE = 600'
+      regexp='#MAX_CREATES_PER_MINUTE=50'
+      replace='MAX_CREATES_PER_MINUTE=600'
 
   - name:   configuration graphite-carbon
     args:
@@ -51,14 +55,14 @@
   #- name: setting  graphite-local
   - replace:
       dest=/etc/graphite/local_settings.py
-      regexp='#SECRET_KEY = \'UNSAFE_DEFAULT\''
-      replace='SECRET_KEY = \'jkfdjlskfjdslkjopelezkmlezakmlza5654trlkre\''
+      regexp='#SECRET_KEY=\'UNSAFE_DEFAULT\''
+      replace='SECRET_KEY=\'jkfdjlskfjdslkjopelezkmlezakmlza5654trlkre\''
 
   #- name: setting  graphite-local2
   - replace:
       dest=/etc/graphite/local_settings.py
-      regexp='#TIME_ZONE = America/Los_Angeles'
-      replace='TIME_ZONE = Europe/Paris'
+      regexp='#TIME_ZONE=America/Los_Angeles'
+      replace='TIME_ZONE=Europe/Paris'
 
   - name: demarrage services
     args:
